--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-cav-ui-mock-input/__pycache__*
+cav-ui-mock-input/__pycache__/*
+src/__pycache__/*
+src/screens/__pycache__/*
+src/screens/popups/__pycache__/*
