--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 cav-ui-mock-input/__pycache__/*
-src/__pycache__/*
-src/screens/__pycache__/*
-src/screens/popups/__pycache__/*
+src/**/__pycache__/*
